# advent-of-code-24

./: .gitignore  README.md  pyproject.toml
src/advent_of_code_24/: __main__.py
src/advent_of_code_24/days/day_1/: __init__.py
src/advent_of_code_24/days/day_11/: __init__.py
src/advent_of_code_24/days/day_2/: __init__.py
src/advent_of_code_24/days/day_3/: __init__.py  __main__.py
src/advent_of_code_24/days/day_7/: __init__.py
